# bde3-dbt

./: README.md  pyproject.toml
bde3_assignment/: dbt_project.yml
bde3_assignment/models/: schema.yml
bde3_assignment/models/datamart/: dm_host_neighbourhood.sql  dm_listing_neighbourhood.sql  dm_property_type.sql
bde3_assignment/models/staging/: host_stg.sql  nsw_lga_code_stg.sql  nsw_lga_suburb_stg.sql  property_stg.sql  reviews_stg.sql  room_stg.sql  stg_census_lga_g01.sql  stg_census_lga_g02.sql  stg_host.sql  stg_nsw_lga_suburb.sql  stg_property.sql  stg_room.sql
bde3_assignment/models/warehouse/: dim_census_g01.sql  dim_census_g02.sql  dim_host.sql  dim_lga.sql  dim_property_type.sql  dim_room_type.sql  dim_suburbs.sql  facts_listings.sql
bde3_assignment/snapshots/: host_snapshot.sql  property_snapshot.sql  reviews_snapshot.sql  room_snapshot.sql
